page view, router and application

--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <title>App</title>
+    <link rel="stylesheet" href="css/pageslider.css" />
     <script data-main="js/{{packageName}}" src="js/require.js"></script>
   </head>
   <body>
-
+    <section id="container"></section>
   </body>
 </html>
