--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <title>App</title>
-    <link rel="stylesheet" href="css/pageslider.css" />
+    <link rel="stylesheet" href="assets/css/pageslider.css" />
+    <link rel="stylesheet" href="assets/css/styles.css" />
     <script data-main="js/{{packageName}}" src="js/require.js"></script>
   </head>
   <body>
